--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <input type="file" id="choiImage" accept=".png,.jpg, .jpeg">
                             </div>
                             <div class="image">
-                                <img src="./images/trump2.jpg" id="img1" alt="image du contact" width="80%">
+                                <img src="./images/imgcontacts.png" id="img1" alt="image du contact" width="80%">
                             </div>
                         </div>
                         <div class="cli">
