--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Formulaire utilisateurs</title>
 </head>
 <body>
@@ -50,7 +50,7 @@
                         </div>
                         <div class="cli">
                             <button class="btn cree" id="btnCreer" type="submit">Créer</button>
-                            <button class="btn reinit">Réinit.</button>
+                            <button class="btn reinit" type="reset">Réinit.</button>
                         </div>
                        
                     </form>
@@ -69,8 +69,7 @@
         </div>
     </div>
    
-
-    <!-- <script src="formulaire.js"></script> -->
-    <script src="formulaire.js"></script>
+    
+    <script src="js/formulaire.js"></script>
 </body>
 </html>
